[gd_scene load_steps=6 format=3 uid="uid://dfkb2ynjj34r3"]

[ext_resource type="Script" uid="uid://c5gcl2oe8oya4" path="res://Scripts/PlayerUIPanel.gd" id="1_0lxf1"]
[ext_resource type="PackedScene" uid="uid://csm3owwvjtjpl" path="res://Scenes/ChoiceButton.tscn" id="2_3tquo"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hqfgv"]

[sub_resource type="SystemFont" id="SystemFont_hqfgv"]
font_names = PackedStringArray("SimSun")
subpixel_positioning = 0

[sub_resource type="FontVariation" id="FontVariation_eavkd"]
base_font = SubResource("SystemFont_hqfgv")
variation_opentype = {
2003265652: 400
}

[node name="PlayerUIPanel" type="Control"]
custom_minimum_size = Vector2(500, 600)
layout_mode = 3
anchors_preset = 0
offset_left = 24.0
offset_top = 21.0
offset_right = 524.0
offset_bottom = 621.0
script = ExtResource("1_0lxf1")
metadata/_edit_vertical_guides_ = [1153.0]

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -9.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_hqfgv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 57.0
offset_top = 8.0
offset_right = 357.0
offset_bottom = 608.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer" groups=["ui_interactable"]]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer" groups=["ui_interactable"]]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
theme_override_fonts/normal_font = SubResource("FontVariation_eavkd")

[node name="CurrentTextLabel" type="RichTextLabel" parent="VBoxContainer" groups=["ui_interactable"]]
clip_contents = false
custom_minimum_size = Vector2(300, 150)
layout_mode = 2
size_flags_vertical = 3

[node name="ChoiceContainer" type="VBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_constants/margin_right = 150

[node name="ContinueButton" type="Button" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
text = "Continue"

[node name="NotContinueButton" parent="VBoxContainer/MarginContainer" instance=ExtResource("2_3tquo")]
visible = false
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 3
owner_player_id = -1

[node name="WaitingLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
text = "Waiting for player...."
